fourth commit, adding the footer and tweaking the last details

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Store LJI|Descargá nuestras APP y juegos</title>
+    <title>LJI Store|Descargá nuestras APP y juegos</title>
     <link href="./assets/css/normalize.css" rel="stylesheet">
     <link href="./assets/css/reset.css" rel="stylesheet">
     <link href="./assets/css/style.css" rel="stylesheet">
@@ -370,7 +370,8 @@
 </section>
     </main>
     <footer class="footer">
-       &copy 2021 - Todos los Derechos Reservados - Luciano Isa
+       <h3>&copy 2021 - LJI Store - Todos los Derechos Reservados - Luciano Isa</h3>
+       <h4>lucianoisabb@hotmail.com</h4>
     </footer>
     <script src="./assets/js/fontawesome.all.min.js"></script>
 </body>
